# stylus-erc20-workshop

./: .env.example  Cargo.toml  README.md  rust-toolchain.toml
examples/: erc20.rs
src/: lib.rs  main.rs
